# api/swagger/swagger.yaml
@@ -146,7 +146,27 @@ paths:
           schema:
             $ref: "#/definitions/ErrorResponse"
       x-swagger-router-controller: "trade_controller"
-
+  /trade/updateState:
+    post:
+      tags: 
+        - trade      
+      description: "updates state"
+      operationId: "updateState"
+      consumes:
+        - application/json
+      produces:
+        - application/json
+      responses:
+        "200":
+          description: Success
+          schema:
+            $ref: "#/definitions/SuccessResponse"    
+        # responses may fall through to errors
+        default:
+          description: Error
+          schema:
+            $ref: "#/definitions/ErrorResponse"
+      x-swagger-router-controller: "trade_controller"
   /authority/register:
     post:
       tags: 
